name:                ln-ui-core
version:             0.1.0.0
synopsis:            Core routines for ln-ui-*
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-ui-core#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.UI.Core
                       LN.UI.Router
                       LN.UI.Router.CRUD
                       LN.UI.Router.Link
                       LN.UI.Router.LinkName
                       LN.UI.Router.OrderBy
                       LN.UI.Router.Param
                       LN.UI.Router.Route
                       LN.UI.Router.Util
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , text
                     , transformers
                     , web-routes
                     , haskell-api-helpers-shared
                     , haskell-ln-types
  default-language:    Haskell2010

test-suite ln-ui-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ln-ui-core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-ui-core
