name:                ln-ui-core
version:             0.1.0.2
synopsis:            Core routines for ln-ui-*
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-ui-core#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.UI.Core
                       LN.UI.Core.Access
                       LN.UI.Core.Loader
                       LN.UI.Core.PageInfo
                       LN.UI.Core.PageNumbers
                       LN.UI.Core.Sort
                       LN.UI.Core.Types
                       LN.UI.Core.Helpers.DataInt
                       LN.UI.Core.Helpers.DataList
                       LN.UI.Core.Helpers.DataText
                       LN.UI.Core.Helpers.DataTime
                       LN.UI.Core.Helpers.GHCJS
                       LN.UI.Core.Helpers.HaskellApiHelpers
                       LN.UI.Core.Helpers.Map
                       LN.UI.Core.Helpers.WebRoutes
                       LN.UI.Core.Router
                       LN.UI.Core.Router.CRUD
                       LN.UI.Core.Router.Crumb
                       LN.UI.Core.Router.Link
                       LN.UI.Core.Router.LinkName
                       LN.UI.Core.Router.OrderBy
                       LN.UI.Core.Router.Param
                       LN.UI.Core.Router.Route
                       LN.UI.Core.Router.Util
                       LN.UI.Core.State
                       LN.UI.Core.State.Internal
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , data-default
                     , mtl
                     , parsec
                     , text
                     , time
                     , transformers
                     , web-routes == 99.99
                     , haskell-api-helpers-shared
                     , haskell-ln-types
  if impl(ghcjs)
    build-depends:     ghcjs-ajax, ln-api-ghcjs, haskell-api-helpers-ghcjs
  else
    build-depends:     ln-api, haskell-api-helpers
  if impl(ghcjs)
    build-depends:     ghcjs-base
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite ln-ui-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LN.UI.Core.PageNumbersSpec
                     , LN.UI.Core.Router.RouteSpec
                     , LN.UI.Core.Router.CRUDSpec
  build-depends:       base
                     , hspec
                     , text
                     , web-routes
                     , haskell-ln-types
                     , ln-ui-core
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-ui-core
